# arxiv-daily

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  viewer.html  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  viewer.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/arxiv/: feed.rs  types.rs
src-tauri/src/commands/: arxiv.rs  favorites.rs  llm.rs  mod.rs  settings.rs  viewer.rs
src-tauri/src/db/: migrations.rs  mod.rs  models.rs
src/components/articles/: ArticleCard.tsx  ArticleList.tsx  LatexText.tsx
src/components/layout/: Header.tsx  Sidebar.tsx
src/components/settings/: ApiKeyForm.tsx  CategoryPicker.tsx  SettingsPage.tsx
src/hooks/: useArticles.ts  useFavorites.ts
src/lib/: categories.ts  tauri.ts  utils.ts
src/store/: useAppStore.ts  useSettingsStore.ts
src/styles/: globals.css
src/viewer/: ViewerApp.tsx  main.tsx
