[package]
name = "arxiv-daily"
version = "0.1.0"
description = "arXiv Daily Paper Manager"
authors = []
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "arxiv_daily_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
tauri        = { version = "2.7.0", features = [] }
tauri-plugin-shell        = "2"
tauri-plugin-notification = "2"
tauri-plugin-log          = "2"

serde      = { version = "1", features = ["derive"] }
serde_json = "1"
log        = "0.4"

tokio    = { version = "1", features = ["full"] }
reqwest  = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
quick-xml = { version = "0.37" }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono   = { version = "0.4", features = ["serde"] }
anyhow   = "1"
once_cell = "1"
url      = "2"

[profile.dev]
incremental = true

[profile.release]
panic         = "abort"
codegen-units = 1
lto           = true
opt-level     = "s"
strip         = true
